// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots cell align center 1`] = `
<div
  data-css-vijq7m=""
  role="table"
>
  <div
    data-css-lmjdxe=""
    role="row"
  >
    <div
      data-css-1fq7qo2=""
      role="cell"
      style={Object {}}
    >
      Cell aligned 
      center
    </div>
  </div>
</div>
`;

exports[`Storyshots cell align left 1`] = `
<div
  data-css-vijq7m=""
  role="table"
>
  <div
    data-css-lmjdxe=""
    role="row"
  >
    <div
      data-css-yawg45=""
      role="cell"
      style={Object {}}
    >
      Cell aligned 
      left
    </div>
  </div>
</div>
`;

exports[`Storyshots cell align right 1`] = `
<div
  data-css-vijq7m=""
  role="table"
>
  <div
    data-css-lmjdxe=""
    role="row"
  >
    <div
      data-css-mxt6a3=""
      role="cell"
      style={Object {}}
    >
      Cell aligned 
      right
    </div>
  </div>
</div>
`;

exports[`Storyshots cell auto style anchor tag 1`] = `
<div
  data-css-vijq7m=""
  role="table"
>
  <div
    data-css-lmjdxe=""
    role="row"
  >
    <div
      data-css-yawg45=""
      role="cell"
      style={Object {}}
    >
      <a
        href="https://duckduckgo.com"
      >
        Native anchor tag
      </a>
    </div>
    <div
      data-css-yawg45=""
      role="cell"
      style={Object {}}
    >
      Cell 2
    </div>
  </div>
  <div
    data-css-lmjdxe=""
    role="row"
  >
    <div
      data-css-yawg45=""
      role="cell"
      style={Object {}}
    >
      <a
        data-css-1ud2sxh=""
        href="https://duckduckgo.com"
      >
        Link component with anchor tag
      </a>
    </div>
    <div
      data-css-yawg45=""
      role="cell"
      style={Object {}}
    >
      Cell 2
    </div>
  </div>
</div>
`;

exports[`Storyshots cell custom className 1`] = `
<div
  data-css-vijq7m=""
  role="table"
>
  <div
    data-css-lmjdxe=""
    role="row"
  >
    <div
      className="some-classname"
      data-css-yawg45=""
      role="cell"
      style={Object {}}
    >
      cell text
    </div>
  </div>
</div>
`;

exports[`Storyshots cell custom style 1`] = `
<div
  data-css-vijq7m=""
  role="table"
>
  <div
    data-css-lmjdxe=""
    role="row"
  >
    <div
      data-css-yawg45=""
      role="cell"
      style={
        Object {
          "outline": "1px solid red",
        }
      }
    >
      cell text
    </div>
  </div>
</div>
`;

exports[`Storyshots cell emphasis text 1`] = `
<div
  data-css-vijq7m=""
  role="table"
>
  <div
    data-css-lmjdxe=""
    role="row"
  >
    <div
      data-css-13emsj4=""
      role="cell"
      style={Object {}}
    >
      em-PHA-sis
    </div>
    <div
      data-css-yawg45=""
      role="cell"
      style={Object {}}
    >
      Non emphasized
    </div>
  </div>
</div>
`;

exports[`Storyshots cell empty 1`] = `
<div
  data-css-vijq7m=""
  role="table"
>
  <div
    data-css-lmjdxe=""
    role="row"
  >
    <div
      data-css-yawg45=""
      role="cell"
      style={Object {}}
    />
  </div>
</div>
`;

exports[`Storyshots cell flex 1 | 4 1`] = `
<div
  data-css-vijq7m=""
  role="table"
>
  <div
    data-css-lmjdxe=""
    role="row"
  >
    <div
      data-css-yawg45=""
      role="cell"
      style={
        Object {
          "flex": "1",
        }
      }
    >
      Flex 1 Flex 1 Flex 1 Flex 1 Flex 1 Flex 1 Flex 1 Flex 1
    </div>
    <div
      data-css-yawg45=""
      role="cell"
      style={
        Object {
          "flex": "4",
        }
      }
    >
      Flex 4 Flex 4 Flex 4 Flex 4 Flex 4 Flex 4 Flex 4 Flex 4
    </div>
  </div>
</div>
`;

exports[`Storyshots cell flex 2 | 1 1`] = `
<div
  data-css-vijq7m=""
  role="table"
>
  <div
    data-css-lmjdxe=""
    role="row"
  >
    <div
      data-css-yawg45=""
      role="cell"
      style={
        Object {
          "flex": "2",
        }
      }
    >
      Flex 2
    </div>
    <div
      data-css-yawg45=""
      role="cell"
      style={
        Object {
          "flex": "1",
        }
      }
    >
      Flex 1
    </div>
  </div>
</div>
`;

exports[`Storyshots cell flex, multiple cell, multiple row 1`] = `
<div
  data-css-vijq7m=""
  role="table"
>
  <div
    data-css-lmjdxe=""
    role="row"
  >
    <div
      data-css-yawg45=""
      role="cell"
      style={
        Object {
          "flex": "2",
        }
      }
    >
      Flex 2
    </div>
    <div
      data-css-yawg45=""
      role="cell"
      style={
        Object {
          "flex": "1",
        }
      }
    >
      Flex 1
    </div>
  </div>
  <div
    data-css-lmjdxe=""
    role="row"
  >
    <div
      data-css-yawg45=""
      role="cell"
      style={
        Object {
          "flex": "2",
        }
      }
    >
      Flex 2
    </div>
    <div
      data-css-yawg45=""
      role="cell"
      style={
        Object {
          "flex": "1",
        }
      }
    >
      Flex 1
    </div>
  </div>
</div>
`;

exports[`Storyshots cell inner padding 1`] = `
<div
  data-css-vijq7m=""
  role="table"
>
  <div
    data-css-lmjdxe=""
    role="row"
  >
    <div
      data-css-yawg45=""
      role="cell"
      style={Object {}}
    >
      Cell 1 text Cell 1 text Cell 1 text Cell 1 text Cell 1 text Cell 1 text Cell 1 text Cell 1 text Cell 1 text Cell 1 text Cell 1 text Cell
    </div>
    <div
      data-css-yawg45=""
      role="cell"
      style={Object {}}
    >
      Cell 2 text Cell 2 text Cell 2 text Cell 2 text Cell 2 text Cell 2 text Cell 2 text Cell 2 text Cell 2 text Cell 2 text Cell 2 text Cell
    </div>
  </div>
</div>
`;

exports[`Storyshots cell multiple text 1`] = `
<div
  data-css-vijq7m=""
  role="table"
>
  <div
    data-css-lmjdxe=""
    role="row"
  >
    <div
      data-css-yawg45=""
      role="cell"
      style={Object {}}
    >
      Cell 1 text
    </div>
    <div
      data-css-yawg45=""
      role="cell"
      style={Object {}}
    >
      Cell 2 text
    </div>
  </div>
</div>
`;

exports[`Storyshots cell text 1`] = `
<div
  data-css-vijq7m=""
  role="table"
>
  <div
    data-css-lmjdxe=""
    role="row"
  >
    <div
      data-css-yawg45=""
      role="cell"
      style={Object {}}
    >
      Cell text
    </div>
  </div>
</div>
`;

exports[`Storyshots cell with child anchor 1`] = `
<div
  data-css-vijq7m=""
  role="table"
>
  <div
    data-css-lmjdxe=""
    role="row"
  >
    <div
      data-css-yawg45=""
      role="cell"
      style={Object {}}
    >
      cell text 
      <a
        href="#"
      >
        inline link
      </a>
       and more text
    </div>
  </div>
</div>
`;

exports[`Storyshots columnHeader align center 1`] = `
<div
  data-css-vijq7m=""
  role="table"
>
  <div
    data-css-lmjdxe=""
    role="row"
  >
    <div
      data-css-vb7sgq=""
      role="columnheader"
      style={Object {}}
    >
      Header aligned center
    </div>
  </div>
</div>
`;

exports[`Storyshots columnHeader align center w/ sort 1`] = `
<div
  data-css-vijq7m=""
  role="table"
>
  <div
    data-css-lmjdxe=""
    role="row"
  >
    <div
      aria-sort="none"
      data-css-vb7sgq=""
      role="columnheader"
      style={Object {}}
    >
      Header sortable, aligned center
      <div
        data-css-1pv1hob=""
        data-css-7dab2f=""
      >
        <svg
          aria-label="sort icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.646 5.354a.5.5 0 01.708 0l4.292 4.292a.5.5 0 010 .708l-.703.703a.5.5 0 01-.707 0L12 7.83l-3.236 3.227a.5.5 0 01-.707 0l-.703-.703a.5.5 0 010-.708l4.292-4.292zm0 13.292l-4.292-4.292a.5.5 0 010-.708l.703-.703a.5.5 0 01.707 0L12 16.17l3.236-3.227a.5.5 0 01.707 0l.703.703a.5.5 0 010 .708l-4.292 4.292a.5.5 0 01-.708 0z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots columnHeader align left 1`] = `
<div
  data-css-vijq7m=""
  role="table"
>
  <div
    data-css-lmjdxe=""
    role="row"
  >
    <div
      data-css-1whtcij=""
      role="columnheader"
      style={Object {}}
    >
      Header aligned left
    </div>
  </div>
</div>
`;

exports[`Storyshots columnHeader align left w/ sort 1`] = `
<div
  data-css-vijq7m=""
  role="table"
>
  <div
    data-css-lmjdxe=""
    role="row"
  >
    <div
      aria-sort="none"
      data-css-1whtcij=""
      role="columnheader"
      style={Object {}}
    >
      Header sortable, aligned left
      <div
        data-css-1pv1hob=""
        data-css-7dab2f=""
      >
        <svg
          aria-label="sort icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.646 5.354a.5.5 0 01.708 0l4.292 4.292a.5.5 0 010 .708l-.703.703a.5.5 0 01-.707 0L12 7.83l-3.236 3.227a.5.5 0 01-.707 0l-.703-.703a.5.5 0 010-.708l4.292-4.292zm0 13.292l-4.292-4.292a.5.5 0 010-.708l.703-.703a.5.5 0 01.707 0L12 16.17l3.236-3.227a.5.5 0 01.707 0l.703.703a.5.5 0 010 .708l-4.292 4.292a.5.5 0 01-.708 0z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots columnHeader align right 1`] = `
<div
  data-css-vijq7m=""
  role="table"
>
  <div
    data-css-lmjdxe=""
    role="row"
  >
    <div
      data-css-1793321=""
      role="columnheader"
      style={Object {}}
    >
      Header aligned right
    </div>
  </div>
</div>
`;

exports[`Storyshots columnHeader align right w/ sort 1`] = `
<div
  data-css-vijq7m=""
  role="table"
>
  <div
    data-css-lmjdxe=""
    role="row"
  >
    <div
      aria-sort="none"
      data-css-1793321=""
      role="columnheader"
      style={Object {}}
    >
      Header sortable, aligned right
      <div
        data-css-1pv1hob=""
        data-css-7dab2f=""
      >
        <svg
          aria-label="sort icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.646 5.354a.5.5 0 01.708 0l4.292 4.292a.5.5 0 010 .708l-.703.703a.5.5 0 01-.707 0L12 7.83l-3.236 3.227a.5.5 0 01-.707 0l-.703-.703a.5.5 0 010-.708l4.292-4.292zm0 13.292l-4.292-4.292a.5.5 0 010-.708l.703-.703a.5.5 0 01.707 0L12 16.17l3.236-3.227a.5.5 0 01.707 0l.703.703a.5.5 0 010 .708l-4.292 4.292a.5.5 0 01-.708 0z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots columnHeader custom className 1`] = `
<div
  data-css-vijq7m=""
  role="table"
>
  <div
    data-css-lmjdxe=""
    role="row"
  >
    <div
      className="some-classname"
      data-css-1whtcij=""
      role="columnheader"
      style={Object {}}
    >
      header text
    </div>
  </div>
</div>
`;

exports[`Storyshots columnHeader custom style 1`] = `
<div
  data-css-vijq7m=""
  role="table"
>
  <div
    data-css-lmjdxe=""
    role="row"
  >
    <div
      data-css-1whtcij=""
      role="columnheader"
      style={
        Object {
          "outline": "1px solid red",
        }
      }
    >
      column header
    </div>
  </div>
</div>
`;

exports[`Storyshots columnHeader long, align center w/ sort 1`] = `
<div
  data-css-vijq7m=""
  role="table"
>
  <div
    data-css-lmjdxe=""
    role="row"
  >
    <div
      aria-sort="none"
      data-css-vb7sgq=""
      role="columnheader"
      style={Object {}}
    >
       Long header sortable Long header sortable Long header sortable Long header sortable Long header sortable Long header sortable Long header sortable Long header sortable Long header sortable, aligned center
      <div
        data-css-1pv1hob=""
        data-css-7dab2f=""
      >
        <svg
          aria-label="sort icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.646 5.354a.5.5 0 01.708 0l4.292 4.292a.5.5 0 010 .708l-.703.703a.5.5 0 01-.707 0L12 7.83l-3.236 3.227a.5.5 0 01-.707 0l-.703-.703a.5.5 0 010-.708l4.292-4.292zm0 13.292l-4.292-4.292a.5.5 0 010-.708l.703-.703a.5.5 0 01.707 0L12 16.17l3.236-3.227a.5.5 0 01.707 0l.703.703a.5.5 0 010 .708l-4.292 4.292a.5.5 0 01-.708 0z"
          />
        </svg>
      </div>
    </div>
    <div
      aria-sort="none"
      data-css-vb7sgq=""
      role="columnheader"
      style={Object {}}
    >
      Short header, same align
      <div
        data-css-1pv1hob=""
        data-css-7dab2f=""
      >
        <svg
          aria-label="sort icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.646 5.354a.5.5 0 01.708 0l4.292 4.292a.5.5 0 010 .708l-.703.703a.5.5 0 01-.707 0L12 7.83l-3.236 3.227a.5.5 0 01-.707 0l-.703-.703a.5.5 0 010-.708l4.292-4.292zm0 13.292l-4.292-4.292a.5.5 0 010-.708l.703-.703a.5.5 0 01.707 0L12 16.17l3.236-3.227a.5.5 0 01.707 0l.703.703a.5.5 0 010 .708l-4.292 4.292a.5.5 0 01-.708 0z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots columnHeader long, align left w/ sort 1`] = `
<div
  data-css-vijq7m=""
  role="table"
>
  <div
    data-css-lmjdxe=""
    role="row"
  >
    <div
      aria-sort="none"
      data-css-1whtcij=""
      role="columnheader"
      style={Object {}}
    >
       Long header sortable Long header sortable Long header sortable Long header sortable Long header sortable Long header sortable Long header sortable Long header sortable Long header sortable, aligned left
      <div
        data-css-1pv1hob=""
        data-css-7dab2f=""
      >
        <svg
          aria-label="sort icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.646 5.354a.5.5 0 01.708 0l4.292 4.292a.5.5 0 010 .708l-.703.703a.5.5 0 01-.707 0L12 7.83l-3.236 3.227a.5.5 0 01-.707 0l-.703-.703a.5.5 0 010-.708l4.292-4.292zm0 13.292l-4.292-4.292a.5.5 0 010-.708l.703-.703a.5.5 0 01.707 0L12 16.17l3.236-3.227a.5.5 0 01.707 0l.703.703a.5.5 0 010 .708l-4.292 4.292a.5.5 0 01-.708 0z"
          />
        </svg>
      </div>
    </div>
    <div
      aria-sort="none"
      data-css-1whtcij=""
      role="columnheader"
      style={Object {}}
    >
      Short header, same align
      <div
        data-css-1pv1hob=""
        data-css-7dab2f=""
      >
        <svg
          aria-label="sort icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.646 5.354a.5.5 0 01.708 0l4.292 4.292a.5.5 0 010 .708l-.703.703a.5.5 0 01-.707 0L12 7.83l-3.236 3.227a.5.5 0 01-.707 0l-.703-.703a.5.5 0 010-.708l4.292-4.292zm0 13.292l-4.292-4.292a.5.5 0 010-.708l.703-.703a.5.5 0 01.707 0L12 16.17l3.236-3.227a.5.5 0 01.707 0l.703.703a.5.5 0 010 .708l-4.292 4.292a.5.5 0 01-.708 0z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots columnHeader long, align right w/ sort 1`] = `
<div
  data-css-vijq7m=""
  role="table"
>
  <div
    data-css-lmjdxe=""
    role="row"
  >
    <div
      aria-sort="none"
      data-css-1793321=""
      role="columnheader"
      style={Object {}}
    >
       Long header sortable Long header sortable Long header sortable Long header sortable Long header sortable Long header sortable Long header sortable Long header sortable Long header sortable, aligned right
      <div
        data-css-1pv1hob=""
        data-css-7dab2f=""
      >
        <svg
          aria-label="sort icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.646 5.354a.5.5 0 01.708 0l4.292 4.292a.5.5 0 010 .708l-.703.703a.5.5 0 01-.707 0L12 7.83l-3.236 3.227a.5.5 0 01-.707 0l-.703-.703a.5.5 0 010-.708l4.292-4.292zm0 13.292l-4.292-4.292a.5.5 0 010-.708l.703-.703a.5.5 0 01.707 0L12 16.17l3.236-3.227a.5.5 0 01.707 0l.703.703a.5.5 0 010 .708l-4.292 4.292a.5.5 0 01-.708 0z"
          />
        </svg>
      </div>
    </div>
    <div
      aria-sort="none"
      data-css-1793321=""
      role="columnheader"
      style={Object {}}
    >
      Short header, same align
      <div
        data-css-1pv1hob=""
        data-css-7dab2f=""
      >
        <svg
          aria-label="sort icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.646 5.354a.5.5 0 01.708 0l4.292 4.292a.5.5 0 010 .708l-.703.703a.5.5 0 01-.707 0L12 7.83l-3.236 3.227a.5.5 0 01-.707 0l-.703-.703a.5.5 0 010-.708l4.292-4.292zm0 13.292l-4.292-4.292a.5.5 0 010-.708l.703-.703a.5.5 0 01.707 0L12 16.17l3.236-3.227a.5.5 0 01.707 0l.703.703a.5.5 0 010 .708l-4.292 4.292a.5.5 0 01-.708 0z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots columnHeader sort asc 1`] = `
<div
  data-css-vijq7m=""
  role="table"
>
  <div
    data-css-lmjdxe=""
    role="row"
  >
    <div
      aria-sort="ascending"
      data-css-1whtcij=""
      role="columnheader"
      style={Object {}}
    >
      sorted header
      <div
        data-css-1pv1hob=""
        data-css-7dab2f=""
      >
        <svg
          aria-label="sort desc icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.646 5.354L7.354 9.646a.5.5 0 000 .707l.703.704a.5.5 0 00.707 0L11 8.827V17.5a.5.5 0 00.5.5h1a.5.5 0 00.5-.5V8.827l2.236 2.23a.5.5 0 00.707 0l.704-.704a.5.5 0 000-.707l-4.293-4.292a.5.5 0 00-.707 0z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots columnHeader sort asc w/ onClick 1`] = `
<div
  data-css-vijq7m=""
  role="table"
>
  <div
    data-css-lmjdxe=""
    role="row"
  >
    <div
      aria-sort="ascending"
      data-css-1yecw7w=""
      role="columnheader"
      style={Object {}}
    >
      <button
        data-css-1vzhat4=""
        onClick={[Function]}
      >
        <div
          data-css-tdspsj=""
        >
          active header
          <div
            data-css-1pv1hob=""
            data-css-7dab2f=""
          >
            <svg
              aria-label="sort desc icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M11.646 5.354L7.354 9.646a.5.5 0 000 .707l.703.704a.5.5 0 00.707 0L11 8.827V17.5a.5.5 0 00.5.5h1a.5.5 0 00.5-.5V8.827l2.236 2.23a.5.5 0 00.707 0l.704-.704a.5.5 0 000-.707l-4.293-4.292a.5.5 0 00-.707 0z"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
    <div
      aria-sort="none"
      data-css-1pztpqq=""
      role="columnheader"
      style={Object {}}
    >
      <button
        data-css-1vzhat4=""
        onClick={[Function]}
      >
        <div
          data-css-tdspsj=""
        >
          other sortable
          <div
            data-css-1pv1hob=""
            data-css-7dab2f=""
          >
            <svg
              aria-label="sort icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M11.646 5.354a.5.5 0 01.708 0l4.292 4.292a.5.5 0 010 .708l-.703.703a.5.5 0 01-.707 0L12 7.83l-3.236 3.227a.5.5 0 01-.707 0l-.703-.703a.5.5 0 010-.708l4.292-4.292zm0 13.292l-4.292-4.292a.5.5 0 010-.708l.703-.703a.5.5 0 01.707 0L12 16.17l3.236-3.227a.5.5 0 01.707 0l.703.703a.5.5 0 010 .708l-4.292 4.292a.5.5 0 01-.708 0z"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
    <div
      data-css-1whtcij=""
      role="columnheader"
      style={Object {}}
    >
      no sort
    </div>
  </div>
</div>
`;

exports[`Storyshots columnHeader sort default 1`] = `
<div
  data-css-vijq7m=""
  role="table"
>
  <div
    data-css-lmjdxe=""
    role="row"
  >
    <div
      aria-sort="none"
      data-css-1whtcij=""
      role="columnheader"
      style={Object {}}
    >
      header text
      <div
        data-css-1pv1hob=""
        data-css-7dab2f=""
      >
        <svg
          aria-label="sort icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.646 5.354a.5.5 0 01.708 0l4.292 4.292a.5.5 0 010 .708l-.703.703a.5.5 0 01-.707 0L12 7.83l-3.236 3.227a.5.5 0 01-.707 0l-.703-.703a.5.5 0 010-.708l4.292-4.292zm0 13.292l-4.292-4.292a.5.5 0 010-.708l.703-.703a.5.5 0 01.707 0L12 16.17l3.236-3.227a.5.5 0 01.707 0l.703.703a.5.5 0 010 .708l-4.292 4.292a.5.5 0 01-.708 0z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots columnHeader sort default w/ onClick 1`] = `
<div
  data-css-vijq7m=""
  role="table"
>
  <div
    data-css-lmjdxe=""
    role="row"
  >
    <div
      aria-sort="none"
      data-css-1pztpqq=""
      role="columnheader"
      style={Object {}}
    >
      <button
        data-css-1vzhat4=""
        onClick={[Function]}
      >
        <div
          data-css-tdspsj=""
        >
          active header
          <div
            data-css-1pv1hob=""
            data-css-7dab2f=""
          >
            <svg
              aria-label="sort icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M11.646 5.354a.5.5 0 01.708 0l4.292 4.292a.5.5 0 010 .708l-.703.703a.5.5 0 01-.707 0L12 7.83l-3.236 3.227a.5.5 0 01-.707 0l-.703-.703a.5.5 0 010-.708l4.292-4.292zm0 13.292l-4.292-4.292a.5.5 0 010-.708l.703-.703a.5.5 0 01.707 0L12 16.17l3.236-3.227a.5.5 0 01.707 0l.703.703a.5.5 0 010 .708l-4.292 4.292a.5.5 0 01-.708 0z"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
    <div
      aria-sort="none"
      data-css-1pztpqq=""
      role="columnheader"
      style={Object {}}
    >
      <button
        data-css-1vzhat4=""
        onClick={[Function]}
      >
        <div
          data-css-tdspsj=""
        >
          other sortable
          <div
            data-css-1pv1hob=""
            data-css-7dab2f=""
          >
            <svg
              aria-label="sort icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M11.646 5.354a.5.5 0 01.708 0l4.292 4.292a.5.5 0 010 .708l-.703.703a.5.5 0 01-.707 0L12 7.83l-3.236 3.227a.5.5 0 01-.707 0l-.703-.703a.5.5 0 010-.708l4.292-4.292zm0 13.292l-4.292-4.292a.5.5 0 010-.708l.703-.703a.5.5 0 01.707 0L12 16.17l3.236-3.227a.5.5 0 01.707 0l.703.703a.5.5 0 010 .708l-4.292 4.292a.5.5 0 01-.708 0z"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots columnHeader sort desc 1`] = `
<div
  data-css-vijq7m=""
  role="table"
>
  <div
    data-css-lmjdxe=""
    role="row"
  >
    <div
      aria-sort="descending"
      data-css-1whtcij=""
      role="columnheader"
      style={Object {}}
    >
      sorted header
      <div
        data-css-1pv1hob=""
        data-css-7dab2f=""
      >
        <svg
          aria-label="sort desc icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M11 15.173l-2.236-2.23a.5.5 0 00-.707 0l-.703.703a.5.5 0 000 .708l4.292 4.292a.5.5 0 00.707 0l4.293-4.292a.5.5 0 000-.708l-.703-.703a.5.5 0 00-.707 0L13 15.173V6.5a.5.5 0 00-.5-.5h-1a.5.5 0 00-.5.5v8.673z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots columnHeader sort desc w/ onClick 1`] = `
<div
  data-css-vijq7m=""
  role="table"
>
  <div
    data-css-lmjdxe=""
    role="row"
  >
    <div
      aria-sort="descending"
      data-css-1yecw7w=""
      role="columnheader"
      style={Object {}}
    >
      <button
        data-css-1vzhat4=""
        onClick={[Function]}
      >
        <div
          data-css-tdspsj=""
        >
          active header
          <div
            data-css-1pv1hob=""
            data-css-7dab2f=""
          >
            <svg
              aria-label="sort desc icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M11 15.173l-2.236-2.23a.5.5 0 00-.707 0l-.703.703a.5.5 0 000 .708l4.292 4.292a.5.5 0 00.707 0l4.293-4.292a.5.5 0 000-.708l-.703-.703a.5.5 0 00-.707 0L13 15.173V6.5a.5.5 0 00-.5-.5h-1a.5.5 0 00-.5.5v8.673z"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
    <div
      aria-sort="none"
      data-css-1pztpqq=""
      role="columnheader"
      style={Object {}}
    >
      <button
        data-css-1vzhat4=""
        onClick={[Function]}
      >
        <div
          data-css-tdspsj=""
        >
          other sortable
          <div
            data-css-1pv1hob=""
            data-css-7dab2f=""
          >
            <svg
              aria-label="sort icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M11.646 5.354a.5.5 0 01.708 0l4.292 4.292a.5.5 0 010 .708l-.703.703a.5.5 0 01-.707 0L12 7.83l-3.236 3.227a.5.5 0 01-.707 0l-.703-.703a.5.5 0 010-.708l4.292-4.292zm0 13.292l-4.292-4.292a.5.5 0 010-.708l.703-.703a.5.5 0 01.707 0L12 16.17l3.236-3.227a.5.5 0 01.707 0l.703.703a.5.5 0 010 .708l-4.292 4.292a.5.5 0 01-.708 0z"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
    <div
      data-css-1whtcij=""
      role="columnheader"
      style={Object {}}
    >
      no sort
    </div>
  </div>
</div>
`;

exports[`Storyshots columnHeader text 1`] = `
<div
  data-css-vijq7m=""
  role="table"
>
  <div
    data-css-lmjdxe=""
    role="row"
  >
    <div
      data-css-1whtcij=""
      role="columnheader"
      style={Object {}}
    >
      header text
    </div>
  </div>
</div>
`;

exports[`Storyshots columnHeader w/ drawers 1`] = `
<div
  data-css-vijq7m=""
  role="table"
>
  <div
    data-css-1km4byb=""
    role="row"
  >
    <div
      aria-sort="none"
      data-css-1whtcij=""
      role="columnheader"
      style={Object {}}
    >
      header text
      <div
        data-css-1pv1hob=""
        data-css-7dab2f=""
      >
        <svg
          aria-label="sort icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.646 5.354a.5.5 0 01.708 0l4.292 4.292a.5.5 0 010 .708l-.703.703a.5.5 0 01-.707 0L12 7.83l-3.236 3.227a.5.5 0 01-.707 0l-.703-.703a.5.5 0 010-.708l4.292-4.292zm0 13.292l-4.292-4.292a.5.5 0 010-.708l.703-.703a.5.5 0 01.707 0L12 16.17l3.236-3.227a.5.5 0 01.707 0l.703.703a.5.5 0 010 .708l-4.292 4.292a.5.5 0 01-.708 0z"
          />
        </svg>
      </div>
    </div>
    <div
      aria-sort="none"
      data-css-1whtcij=""
      role="columnheader"
      style={Object {}}
    >
      header2 text
      <div
        data-css-1pv1hob=""
        data-css-7dab2f=""
      >
        <svg
          aria-label="sort icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.646 5.354a.5.5 0 01.708 0l4.292 4.292a.5.5 0 010 .708l-.703.703a.5.5 0 01-.707 0L12 7.83l-3.236 3.227a.5.5 0 01-.707 0l-.703-.703a.5.5 0 010-.708l4.292-4.292zm0 13.292l-4.292-4.292a.5.5 0 010-.708l.703-.703a.5.5 0 01.707 0L12 16.17l3.236-3.227a.5.5 0 01.707 0l.703.703a.5.5 0 010 .708l-4.292 4.292a.5.5 0 01-.708 0z"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    aria-expanded={false}
    data-css-eueoca=""
    onClick={[Function]}
    role="button"
  >
    <div
      data-css-lmjdxe=""
      role="row"
    >
      <div
        data-css-yawg45=""
        role="cell"
        style={Object {}}
      >
        cell text
      </div>
      <div
        data-css-yawg45=""
        role="cell"
        style={Object {}}
      >
        cell2 text
      </div>
    </div>
    <div
      data-css-17v14zz=""
    >
      <div
        data-css-1h00rme=""
        data-css-7dab2f=""
      >
        <svg
          aria-label="caret down icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    aria-hidden={true}
    data-css-1s813js=""
  >
    Details content
  </div>
</div>
`;

exports[`Storyshots columnHeader w/ rows 1`] = `
<div
  data-css-vijq7m=""
  role="table"
>
  <div
    data-css-lmjdxe=""
    role="row"
  >
    <div
      aria-sort="none"
      data-css-1whtcij=""
      role="columnheader"
      style={Object {}}
    >
      header text
      <div
        data-css-1pv1hob=""
        data-css-7dab2f=""
      >
        <svg
          aria-label="sort icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.646 5.354a.5.5 0 01.708 0l4.292 4.292a.5.5 0 010 .708l-.703.703a.5.5 0 01-.707 0L12 7.83l-3.236 3.227a.5.5 0 01-.707 0l-.703-.703a.5.5 0 010-.708l4.292-4.292zm0 13.292l-4.292-4.292a.5.5 0 010-.708l.703-.703a.5.5 0 01.707 0L12 16.17l3.236-3.227a.5.5 0 01.707 0l.703.703a.5.5 0 010 .708l-4.292 4.292a.5.5 0 01-.708 0z"
          />
        </svg>
      </div>
    </div>
    <div
      aria-sort="none"
      data-css-1whtcij=""
      role="columnheader"
      style={Object {}}
    >
      header2 text
      <div
        data-css-1pv1hob=""
        data-css-7dab2f=""
      >
        <svg
          aria-label="sort icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.646 5.354a.5.5 0 01.708 0l4.292 4.292a.5.5 0 010 .708l-.703.703a.5.5 0 01-.707 0L12 7.83l-3.236 3.227a.5.5 0 01-.707 0l-.703-.703a.5.5 0 010-.708l4.292-4.292zm0 13.292l-4.292-4.292a.5.5 0 010-.708l.703-.703a.5.5 0 01.707 0L12 16.17l3.236-3.227a.5.5 0 01.707 0l.703.703a.5.5 0 010 .708l-4.292 4.292a.5.5 0 01-.708 0z"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    data-css-lmjdxe=""
    role="row"
  >
    <div
      data-css-yawg45=""
      role="cell"
      style={Object {}}
    >
      cell text
    </div>
    <div
      data-css-yawg45=""
      role="cell"
      style={Object {}}
    >
      cell2 text
    </div>
  </div>
</div>
`;

exports[`Storyshots drawer mulitple 1`] = `
<div
  data-css-vijq7m=""
  role="table"
>
  <div
    aria-expanded={false}
    data-css-eueoca=""
    onClick={[Function]}
    role="button"
  >
    <div
      data-css-lmjdxe=""
      role="row"
    >
      <div
        data-css-yawg45=""
        role="cell"
        style={Object {}}
      >
        wow
      </div>
    </div>
    <div
      data-css-17v14zz=""
    >
      <div
        data-css-1h00rme=""
        data-css-7dab2f=""
      >
        <svg
          aria-label="caret down icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    aria-hidden={true}
    data-css-1s813js=""
  >
    This is details content
  </div>
  <div
    aria-expanded={false}
    data-css-eueoca=""
    onClick={[Function]}
    role="button"
  >
    <div
      data-css-lmjdxe=""
      role="row"
    >
      <div
        data-css-yawg45=""
        role="cell"
        style={Object {}}
      >
        wow
      </div>
    </div>
    <div
      data-css-17v14zz=""
    >
      <div
        data-css-1h00rme=""
        data-css-7dab2f=""
      >
        <svg
          aria-label="caret down icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    aria-hidden={true}
    data-css-1s813js=""
  >
    This is details content
  </div>
</div>
`;

exports[`Storyshots drawer nested table 1`] = `
<div
  data-css-vijq7m=""
  role="table"
>
  <div
    aria-expanded={true}
    data-css-w6nawk=""
    onClick={[Function]}
    role="button"
  >
    <div
      data-css-lmjdxe=""
      role="row"
    >
      <div
        data-css-yawg45=""
        role="cell"
        style={Object {}}
      >
        Parent Cell
      </div>
      <div
        data-css-yawg45=""
        role="cell"
        style={Object {}}
      >
        Parent Cell
      </div>
      <div
        data-css-yawg45=""
        role="cell"
        style={Object {}}
      >
        Parent Cell
      </div>
    </div>
    <div
      data-css-17v14zz=""
    >
      <div
        data-css-7dab2f=""
        data-css-ns6sfg=""
      >
        <svg
          aria-label="caret down icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    aria-hidden={false}
    data-css-1s813js=""
  >
    <div
      data-css-qq9r6d=""
      role="table"
    >
      <div
        data-css-lmjdxe=""
        role="row"
      >
        <div
          data-css-yawg45=""
          role="cell"
          style={Object {}}
        >
          Child Cell
        </div>
        <div
          data-css-yawg45=""
          role="cell"
          style={Object {}}
        >
          Child Cell
        </div>
        <div
          data-css-yawg45=""
          role="cell"
          style={Object {}}
        >
          Child Cell
        </div>
      </div>
      <div
        data-css-lmjdxe=""
        role="row"
      >
        <div
          data-css-yawg45=""
          role="cell"
          style={Object {}}
        >
          Child Cell
        </div>
        <div
          data-css-yawg45=""
          role="cell"
          style={Object {}}
        >
          Child Cell
        </div>
        <div
          data-css-yawg45=""
          role="cell"
          style={Object {}}
        >
          Child Cell
        </div>
      </div>
      <div
        data-css-lmjdxe=""
        role="row"
      >
        <div
          data-css-yawg45=""
          role="cell"
          style={Object {}}
        >
          Child Cell
        </div>
        <div
          data-css-yawg45=""
          role="cell"
          style={Object {}}
        >
          Child Cell
        </div>
        <div
          data-css-yawg45=""
          role="cell"
          style={Object {}}
        >
          Child Cell
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots drawer single 1`] = `
<div
  data-css-vijq7m=""
  role="table"
>
  <div
    aria-expanded={false}
    data-css-eueoca=""
    onClick={[Function]}
    role="button"
  >
    <div
      data-css-lmjdxe=""
      role="row"
    >
      <div
        data-css-yawg45=""
        role="cell"
        style={Object {}}
      >
        wow
      </div>
    </div>
    <div
      data-css-17v14zz=""
    >
      <div
        data-css-1h00rme=""
        data-css-7dab2f=""
      >
        <svg
          aria-label="caret down icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    aria-hidden={true}
    data-css-1s813js=""
  >
    This is details content
  </div>
</div>
`;

exports[`Storyshots drawer w/ flex, some wrap, some not 1`] = `
<div
  data-css-vijq7m=""
  role="table"
>
  <div
    aria-expanded={false}
    data-css-eueoca=""
    onClick={[Function]}
    role="button"
  >
    <div
      data-css-lmjdxe=""
      role="row"
    >
      <div
        data-css-yawg45=""
        role="cell"
        style={
          Object {
            "flex": "2",
          }
        }
      >
        flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2
      </div>
      <div
        data-css-yawg45=""
        role="cell"
        style={
          Object {
            "flex": "1",
          }
        }
      >
        flex 1 flex 1 flex 1 flex 1 flex 1 flex 1 flex 1 flex 1 flex 1
      </div>
    </div>
    <div
      data-css-17v14zz=""
    >
      <div
        data-css-1h00rme=""
        data-css-7dab2f=""
      >
        <svg
          aria-label="caret down icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    aria-hidden={true}
    data-css-1s813js=""
  >
    This is details content
  </div>
  <div
    aria-expanded={false}
    data-css-eueoca=""
    onClick={[Function]}
    role="button"
  >
    <div
      data-css-lmjdxe=""
      role="row"
    >
      <div
        data-css-yawg45=""
        role="cell"
        style={
          Object {
            "flex": "2",
          }
        }
      >
        flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2
      </div>
      <div
        data-css-yawg45=""
        role="cell"
        style={
          Object {
            "flex": "1",
          }
        }
      >
        flex 1 flex 1 flex 1 flex 1 flex 1 flex 1 flex 1 flex 1 flex 1
      </div>
    </div>
    <div
      data-css-17v14zz=""
    >
      <div
        data-css-1h00rme=""
        data-css-7dab2f=""
      >
        <svg
          aria-label="caret down icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    aria-hidden={true}
    data-css-1s813js=""
  >
    This is details content
  </div>
  <div
    aria-expanded={false}
    data-css-eueoca=""
    onClick={[Function]}
    role="button"
  >
    <div
      data-css-lmjdxe=""
      role="row"
    >
      <div
        data-css-yawg45=""
        role="cell"
        style={
          Object {
            "flex": "2",
          }
        }
      >
        flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2 flex 2
      </div>
      <div
        data-css-yawg45=""
        role="cell"
        style={
          Object {
            "flex": "1",
          }
        }
      >
        flex 1 flex 1 flex 1 flex 1 flex 1 flex 1 flex 1 flex 1 flex 1
      </div>
    </div>
    <div
      data-css-17v14zz=""
    >
      <div
        data-css-1h00rme=""
        data-css-7dab2f=""
      >
        <svg
          aria-label="caret down icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    aria-hidden={true}
    data-css-1s813js=""
  >
    This is details content
  </div>
</div>
`;

exports[`Storyshots row custom className 1`] = `
<div
  data-css-vijq7m=""
  role="table"
>
  <div
    className="some-class"
    data-css-lmjdxe=""
    role="row"
  >
    <div
      data-css-yawg45=""
      role="cell"
      style={Object {}}
    >
      innocuous
    </div>
  </div>
</div>
`;

exports[`Storyshots row custom style 1`] = `
<div
  data-css-vijq7m=""
  role="table"
>
  <div
    data-css-lmjdxe=""
    role="row"
    style={
      Object {
        "outline": "1px solid red",
      }
    }
  >
    <div
      data-css-yawg45=""
      role="cell"
      style={Object {}}
    >
      innocuous
    </div>
  </div>
</div>
`;

exports[`Storyshots row multiple rows 1`] = `
<div
  data-css-vijq7m=""
  role="table"
>
  <div
    data-css-lmjdxe=""
    role="row"
  >
    <div
      data-css-yawg45=""
      role="cell"
      style={Object {}}
    >
      Something on a row
    </div>
  </div>
  <div
    data-css-lmjdxe=""
    role="row"
  >
    <div
      data-css-yawg45=""
      role="cell"
      style={Object {}}
    >
      Something on a row
    </div>
  </div>
  <div
    data-css-lmjdxe=""
    role="row"
  >
    <div
      data-css-yawg45=""
      role="cell"
      style={Object {}}
    >
      Something on a row
    </div>
  </div>
</div>
`;

exports[`Storyshots row one row, content 1`] = `
<div
  data-css-vijq7m=""
  role="table"
>
  <div
    data-css-lmjdxe=""
    role="row"
  >
    <div
      data-css-yawg45=""
      role="cell"
      style={Object {}}
    >
      Something on a row
    </div>
  </div>
</div>
`;

exports[`Storyshots row one row, empty 1`] = `
<div
  data-css-vijq7m=""
  role="table"
>
  <div
    data-css-lmjdxe=""
    role="row"
  />
</div>
`;

exports[`Storyshots table custom className 1`] = `
<div
  className="some-class"
  data-css-vijq7m=""
  role="table"
>
  <div
    data-css-lmjdxe=""
    role="row"
  >
    <div
      data-css-yawg45=""
      role="cell"
      style={Object {}}
    >
      innocuous
    </div>
  </div>
</div>
`;

exports[`Storyshots table custom style 1`] = `
<div
  data-css-vijq7m=""
  role="table"
  style={
    Object {
      "outline": "1px solid red",
    }
  }
>
  <div
    data-css-lmjdxe=""
    role="row"
  >
    <div
      data-css-yawg45=""
      role="cell"
      style={Object {}}
    >
      innocuous
    </div>
  </div>
</div>
`;

exports[`Storyshots table empty 1`] = `
<div
  data-css-vijq7m=""
  role="table"
/>
`;
